--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
     --primary-color: rgba(0, 92, 121, 0.75);
-    --overlay-color:  rgba(24,39,51, 0.85);
+    --overlay-color: rgba(24, 39, 51, 0.85);
     --menu-speed: 0.75s
 }
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -12,21 +12,130 @@
 }
 
 .container {
-    max-width: 960px;
+    max-width: 1040px;
     margin: auto;
     overflow: hidden;
     padding: 0 3rem;
 }
 
-.showcase {
+/* landing pages */
+.landing {
     background-color: var(--primary-color);
     color: #fff;
     height: 100vh;
     position: relative;
 }
 
-.showcase::before {
+.landing:before {
     content: '';
-    background: url()
+    background: url(unsplash.jpg) no-repeat center center/cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
+.landing .landing-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+}
+
+.landing h1 {
+    font-size: 4rem;
+}
+
+.landing p {
+    font-size: 1.2 rem;
+}
+
+/* menu button */
+.menu-wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.menu-wrap .toggler {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    opacity: 0;
+
+}
+
+.menu-wrap .hamburger {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 60px;
+    height: 60px;
+    padding: 1rem;
+    background: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-wrap .hamburger>div {
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.4s ease;
+}
+
+/* Top and bottom menu lines */
+.menu-wrap .hamburger>div:before,
+.menu-wrap .hamburger>div:after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    top: -10px;
+    width: 100%;
+    height: 2px;
+    background: inherit;
+}
+
+/* moves lines down*/
+.menu-wrap .hamburger>div:after {
+    top: 10px;
+}
+
+/* toggle animater */
+.menu-wrap .toggler:checked+.hamburger>div {
+    transform: rotate(135deg)
+}
+
+/* turns hamburger into an X */
+.menu-wrap .toggler:checked+.hamburger>div:before,
+.menu-wrap .toggler:checked+.hamburger>div::after {
+    top: 0;
+    transform: rotate(90deg)
+}
+
+.menu-wrap .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
