--- a/style.css
+++ b/style.css
@@ -51,13 +51,15 @@
 }
 
 .landing p {
-    font-size: 1.2 rem;
+    margin-top: 1rem;
+    font-size: 2 rem;
+    font-weight: 600;
 }
 
 /* menu button */
 .menu-wrap {
     position: fixed;
-    top: 0;
+    top:0;
     left: 0;
     z-index: 1;
 }
@@ -71,7 +73,6 @@
     width: 50px;
     height: 50px;
     opacity: 0;
-
 }
 
 .menu-wrap .hamburger {
@@ -116,7 +117,7 @@
     top: 10px;
 }
 
-/* toggle animater */
+/* toggle animater "checked"  is a boolean/event) */
 .menu-wrap .toggler:checked+.hamburger>div {
     transform: rotate(135deg)
 }
@@ -128,14 +129,72 @@
     transform: rotate(90deg)
 }
 
+/* show menu (~) works like bind*/
+.menu-wrap .toggler:checked ~ .menu {
+visibility: visible;
+}
+
+.menu-wrap .toggler:checked ~ .menu > div{
+    transform: scale(1);
+    transition-duration: var(--menu-speed);
+}
+
+.menu-wrap .toggler:checked ~ .menu > div > div{
+opacity: 1;
+transition: 0.4s ease;
+}
+ /* menu button contents */
 .menu-wrap .menu {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100% ;
     height: 100%;
-    overflow: hidden;
+    overflow:  hidden;
+    visibility: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+.menu-wrap .menu > div {
+    background: var(--overlay-color);
+    border-radius: 50%;
+    width: 200vw;
+    height: 200vw;
+    display: flex;
+    flex: none;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: all 0.4s ease;
+    
+}
+
+.menu-wrap .menu > div> div {
+    text-align: center;
+    max-width: 90vw;
+    max-width: 100vh;
+    opacity: 0;
+    transition: opacity 0.4s ease; 
+}
+
+.menu-wrap .menu > div > div> ul> li {
+   list-style: none;
+   color: #fff; 
+   font-size: 1.5rem;
+   padding: 1rem;
+}
+
+.menu-wrap .menu > div > div> ul> li > a {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.4s ease;
+}
+
+
+
+
+
+
+
